# taemdee

./: .env.example  .gitignore  DEEREACH.md  DEPLOY.md  PRODUCT.md  README.md  RELEASE.md  TODO.md  alembic.ini  dev.sh  main.py  note.txt  pyproject.toml  taemdee-final-thai.html  taemdee-home.html  taemdee-sales-manual.html  worker.py
.agents/: launch-30-day-plan.md  product-marketing-context.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_rename_issue_method_search_to_grant.py  0002_staff_picture_url.py  0003_pluralize_table_names.py  0003_staff_is_owner.py  0004_clear_guest_default_display_name.py  0004_customer_line_friend.py  0005_shop_address_contact_hours.py  0005_staff_google_facebook.py  0006_customer_items.py  0007_users_table.py  0008_pairing_originator.py  0009_pairing_originator_set_null.py  0010_drop_pairing_table.py  0011_customer_merged_into.py  0012_staff_username_pin.py  0013_user_username_pin.py  0014_sample_points_redemptions.py  0014_shop_onboarding_step.py  0015_deereach_offer.py  0016_deereach_offer_kind.py  0017_pwa_login_anchor.py  0018_staff_open_invite.py  0019_user_is_pwa_split.py  0020_customer_chat.py  (+34 more)
app/: main.py
design/: HANDOFF.md  HANDOFF_NEXT_SESSION.md  PRODUCT.md  taemdee-brand-sheet.html  taemdee-customer.html  taemdee-final-thai.html  taemdee-home.html  taemdee-shop.html
docs/: pwa-oauth-pairing.md
scripts/: deploy.sh  seed_sample_data.py
static/: manifest.json  manifest_shop.json  offline.html
tests/: _helpers.py  conftest.py  test_config.py  test_main_lifespan.py
(+258 files in other folders)
