[project]
name = "taemdee"
version = "0.1.0"
description = "Digital stamp-card platform for Thai SME shops"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.0",
    "greenlet>=3.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "asyncpg>=0.30.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
    "gunicorn>=23.0.0",
    "segno>=1.6.6",
    "rq>=2.8.0",
    "redis>=7.4.0",
]

[project.optional-dependencies]
test = [
    "aiosqlite>=0.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
